--- a/views/_booking_management_comments.erb
+++ b/views/_booking_management_comments.erb
@@ -1,7 +1,5 @@
          <div class="bottom-margin overflow">
-             <div class="left-margin more_contrast_text top-margin bottom-margin" style="text-decoration:underline;"><%= t.booking_management.form.comments %>
-             </div>
-             <div class="element_template">
+             <div class="element_template" style="min-height:200px">
                <span class="all-space"><%%= entity.comments %></span>
              </div>
          </div>
