--- a/views/_booking_management_notifications.erb
+++ b/views/_booking_management_notifications.erb
@@ -1,70 +1,86 @@
-         <div class="overflow" style="border:1px solid #EEE">
-           <div class="container_12">
-            <div class="grid_6">
-           <div class="left-margin right-margin">
-             <div class="grid_6">
-               <div style="height: 2.5em" class="all-space bottom-separator more_contrast_text"><%=t.booking_management.form.notifications.c1_notification%></div>
-               <div style="height: 2.5em"  class="all-space bottom-separator more_contrast_text"><%=t.booking_management.form.notifications.c3_notification%></div>
-               <div style="height: 2.5em"  class="all-space bottom-separator more_contrast_text"><%=t.booking_management.form.notifications.c2_notification%></div>
-               <div style="height: 2.5em"  class="all-space more_contrast_text"><%=t.booking_management.form.notifications.c4_notification%></div>                            
-             </div>
-             <div class="grid_3">
-               <div style="height: 2.5em" class="all-space bottom-separator">
-                 <%%=entity.customer_req_notification_sent ? '<%= t.booking_management.form.notifications.sent%>' : '<%=t.booking_management.form.notifications.not_sent%>'%>
-               </div>
-               <div style="height: 2.5em" class="all-space bottom-separator">
-                 <%%=entity.customer_req_notification_p_sent  ? '<%= t.booking_management.form.notifications.sent%>' : '<%=t.booking_management.form.notifications.not_sent%>'%>
-               </div>
-               <div style="height: 2.5em" class="all-space bottom-separator">
-                 <%%=entity.customer_notification_sent  ? '<%= t.booking_management.form.notifications.sent%>' : '<%=t.booking_management.form.notifications.not_sent%>'%>
-               </div>
-               <div style="height: 2.5em" class="all-space">
-                 <%%=entity.customer_payment_enabled_sent  ? '<%= t.booking_management.form.notifications.sent%>' : '<%=t.booking_management.form.notifications.not_sent%>'%>
-               </div>                              
-             </div>
-             <div class="grid_3">
-               <div style="height: 2.5em" class="all-space bottom-separator">
-                  <%% if (entity.status != 'cancelled') { %>
-                  <button class="form-button blue-button element-action-button" id="return_booking_button" style="width:95%"
-                      data-action-method="POST"
-                      data-action-url="/api/booking/send-customer-req-notification/<%%=entity.id%>"
-                      data-confirm-message="<%=t.booking_management.form.notifications.resend_confirmation%>">
-                      <%=t.booking_management.form.notifications.send_again%>
-                  </button>
-                  <%% } %>
-               </div>
-               <div style="height: 2.5em" class="all-space bottom-separator">
-                  <%% if (entity.status != 'cancelled' && entity.pay_now) { %>
-                  <button class="form-button blue-button element-action-button" id="return_booking_button" style="width:95%"
-                      data-action-method="POST"
-                      data-action-url="/api/booking/send-customer-req-notification-pay/<%%=entity.id%>"
-                      data-confirm-message="<%=t.booking_management.form.notifications.resend_confirmation%>">
-                      <%=t.booking_management.form.notifications.send_again%>
-                  </button>
-                  <%% } %>
-               </div>
-               <div style="height: 2.5em" class="all-space bottom-separator">
-                  <%% if (entity.status != 'pending_confirmation' && entity.status != 'cancelled') { %>
-                  <button class="form-button blue-button element-action-button" id="return_booking_button" style="width:95%"
-                      data-action-method="POST"
-                      data-action-url="/api/booking/send-customer-conf-notification/<%%=entity.id%>"
-                      data-confirm-message="<%=t.booking_management.form.notifications.resend_confirmation%>">
-                      <%=t.booking_management.form.notifications.send_again%>
-                  </button>
-                  <%% } %>
-               </div>
-               <div style="height: 2.5em" class="all-space">
-                  <%% if (entity.status != 'cancelled' && entity.force_allow_payment) { %>
-                  <button class="form-button blue-button element-action-button" id="return_booking_button" style="width:95%"
-                      data-action-method="POST"
-                      data-action-url="/api/booking/send-customer-pay-enabled/<%%=entity.id%>"
-                      data-confirm-message="<%=t.booking_management.form.notifications.resend_confirmation%>">
-                      <%=t.booking_management.form.notifications.send_again%>
-                  </button>
-                  <%% } %>
-               </div>                                             
-             </div>
-          </div>
-        </div>
+<div class="row">
+  <div class="col-xs-6 col-sm-4 col-lg-3">
+    <a class="block block-link-hover3 text-center" href="javascript:void(0)">
+      <div class="block-content block-content-full">
+        <i class="si <%% if (entity.customer_req_notification_sent) {%>si-envelope-letter text-success<%%}else{%>si-envelope text-danger<%%}%> fa-4x text-primary-darker"></i>
+        <div class="font-w600 push-15-t"><%=t.booking_management.form.notifications.c1_notification%></div>
+        <%% if (entity.status != 'cancelled') { %>
+        <br>
+        <button class="form-button blue-button element-action-button" id="return_booking_button" style="width:95%"
+                data-action-method="POST"
+                data-action-url="/api/booking/send-customer-req-notification/<%%=entity.id%>"
+                data-confirm-message="<%=t.booking_management.form.notifications.resend_confirmation%>">
+          <%% if (entity.customer_req_notification_sent) {%>
+          <%=t.booking_management.form.notifications.send_again%>
+          <%% } else { %>
+          <%=t.booking_management.form.notifications.send_first%>
+          <%% } %>
+        </button>
+        <%% } %>
       </div>
-        </div>
+    </a>
+  </div>
+  <div class="col-xs-6 col-sm-4 col-lg-3">
+    <a class="block block-link-hover3 text-center" href="javascript:void(0)">
+      <div class="block-content block-content-full">
+        <i class="si <%% if (entity.customer_req_notification_p_sent) {%>si-envelope-letter text-success<%%}else{%>si-envelope text-danger<%%}%> fa-4x"></i>
+        <div class="font-w600 push-15-t"><%=t.booking_management.form.notifications.c3_notification%></div>
+        <%% if (entity.status != 'cancelled' && entity.pay_now) { %>
+        <br>
+        <button class="form-button blue-button element-action-button" id="return_booking_button" style="width:95%"
+                data-action-method="POST"
+                data-action-url="/api/booking/send-customer-req-notification-pay/<%%=entity.id%>"
+                data-confirm-message="<%=t.booking_management.form.notifications.resend_confirmation%>">
+          <%% if (entity.customer_req_notification_p_sent) {%>
+          <%=t.booking_management.form.notifications.send_again%>
+          <%% } else { %>
+          <%=t.booking_management.form.notifications.send_first%>
+          <%% } %>
+        </button>
+        <%% } %>
+      </div>
+    </a>
+  </div>
+  <div class="col-xs-6 col-sm-4 col-lg-3">
+    <a class="block block-link-hover3 text-center" href="javascript:void(0)">
+      <div class="block-content block-content-full">
+        <i class="si <%% if (entity.customer_notification_sent) {%>si-envelope-letter text-success<%%}else{%>si-envelope text-danger<%%}%> fa-4x"></i>
+        <div class="font-w600 push-15-t"><%=t.booking_management.form.notifications.c2_notification%></div>
+        <%% if (entity.status != 'pending_confirmation' && entity.status != 'cancelled') { %>
+        <br>
+        <button class="form-button blue-button element-action-button" id="return_booking_button" style="width:95%"
+                data-action-method="POST"
+                data-action-url="/api/booking/send-customer-conf-notification/<%%=entity.id%>"
+                data-confirm-message="<%=t.booking_management.form.notifications.resend_confirmation%>">
+          <%% if (entity.customer_notification_sent) {%>
+          <%=t.booking_management.form.notifications.send_again%>
+          <%% } else { %>
+          <%=t.booking_management.form.notifications.send_first%>
+          <%% } %>
+        </button>
+        <%% } %>
+      </div>
+    </a>
+  </div>
+  <div class="col-xs-6 col-sm-4 col-lg-3">
+    <a class="block block-link-hover3 text-center" href="javascript:void(0)">
+      <div class="block-content block-content-full">
+        <i class="si <%% if (entity.customer_payment_enabled_sent) {%>si-envelope-letter text-success<%%}else{%>si-envelope text-danger<%%}%> fa-4x"></i>
+        <div class="font-w600 push-15-t"><%=t.booking_management.form.notifications.c4_notification%></div>
+        <%% if (entity.status != 'cancelled' && entity.force_allow_payment) { %>
+        <br>
+        <button class="form-button blue-button element-action-button" id="return_booking_button" style="width:95%"
+                data-action-method="POST"
+                data-action-url="/api/booking/send-customer-pay-enabled/<%%=entity.id%>"
+                data-confirm-message="<%=t.booking_management.form.notifications.resend_confirmation%>">
+          <%% if (entity.customer_payment_enabled_sent) {%>
+          <%=t.booking_management.form.notifications.send_again%>
+          <%% } else { %>
+          <%=t.booking_management.form.notifications.send_first%>
+          <%% } %>
+        </button>
+        <%% } %>
+      </div>
+    </a>
+  </div>
+</div>
