--- a/views/_booking_management_workflow.erb
+++ b/views/_booking_management_workflow.erb
@@ -1,12 +1,12 @@
                     <%% if (entity.status == 'pending_confirmation') { %>
-                    <button class="form-button red-button element-action-button" id="cancel_booking_button" 
+                    <button class="btn btn-danger element-action-button" id="cancel_booking_button"
                       title="<%=t.booking_management.form.cancel_button.label%>" 
                       data-action-method="POST"
                       data-action-url="/api/booking/cancel/<%%=entity.id%>"
                       data-confirm-message="<%=t.booking_management.form.cancel_button.message%>">
                       <%=t.booking_management.form.cancel_button.label%>
                     </button>                      
-                    <button class="form-button element-action-button green-button" id="confirm_booking_button" 
+                    <button class="btn btn-success element-action-button" id="confirm_booking_button"
                       title="<%=t.booking_management.form.confirm_button.label%>"
                       data-action-method="POST"
                       data-action-url="/api/booking/confirm/<%%=entity.id%>"
@@ -15,14 +15,14 @@
                     </button>                          
                    <%% } %>
                    <%% if (entity.status == 'confirmed') {  %>                    
-                   <button class="form-button red-button element-action-button" id="cancel_booking_button" 
+                   <button class="btn btn-danger element-action-button" id="cancel_booking_button"
                       title="<%=t.booking_management.form.cancel_button.label%>" 
                       data-action-method="POST"
                       data-action-url="/api/booking/cancel/<%%=entity.id%>"
                       data-confirm-message="<%=t.booking_management.form.cancel_button.message%>">
                       <%=t.booking_management.form.cancel_button.label%>
                    </button>                     
-                   <button class="form-button element-action-button blue-button" id="pickup_booking_button" 
+                   <button class="btn btn-primary element-action-button" id="pickup_booking_button"
                       title="<%=t.booking_management.form.pickup_button.label%>" 
                       data-action-method="POST"
                       data-action-url="/api/booking/pickup/<%%=entity.id%>"
@@ -31,7 +31,7 @@
                    </button>                   
                    <%%  } %>
                    <%% if (entity.status == 'in_progress') { %>
-                   <button class="form-button element-action-button blue-button" id="return_booking_button" 
+                   <button class="btn btn-primary element-action-button" id="return_booking_button"
                       title="<%=t.booking_management.form.return_button.label%>"
                       data-action-method="POST"
                       data-action-url="/api/booking/return/<%%=entity.id%>"
