--- a/views/_booking_management_charges.erb
+++ b/views/_booking_management_charges.erb
@@ -1,41 +1,41 @@
-        <div class="container_12">
-          <div class="grid_7">
-             <div class="bottom-margin bottom-space" style="border:1px solid #EEE">      
-                  <%% if (entity.charges.length > 0) { %>
-                     <table class="table bottom-margin-line bottom-separator">
-                        <thead class="table-header">
-                          <tr>
-                            <th class="table-cell" scope="col" style="width:20%"><%=t.booking_management.form.charge_date%></th>
-                            <th class="table-cell" scope="col" style="width:20%"><%=t.booking_management.form.charge_payment_method%></th>                            
-                            <th class="table-cell" scope="col" style="width:30%"><%=t.booking_management.form.charge_amount%></th>
-                            <th class="table-cell" scope="col" style="width:25%"><%=t.booking_management.form.charge_status%></th>    
-                            <th class="table-cell" scope="col" style="width:5%"></th>    
-                          </tr>
-                        </thead>
-                        <tbody class="table-tbody">
-                          <%% for (var chargeIdx=entity.charges.length-1; chargeIdx >=0 ; chargeIdx--) { %>
-                            <tr class="table-row">
-                               <td class="table-cell centered_text"><%%=self.formatDate(entity.charges[chargeIdx].date, 'dd.MM.yyyy HH:mm')%></td>
-                               <td class="table-cell centered_text"><%%=entity.charges[chargeIdx].payment_method_id%></td>
-                               <td class="table-cell centered_text"><%%= new Number(entity.charges[chargeIdx].amount).toFixed(2) %></td>
-                               <td class="table-cell centered_text"><span class="element-status <%%=self.model.entityHooks[0].chargeStatusClass(entity.charges[chargeIdx])%>"><%%= self.model.entityHooks[0].chargeStatusDescription[entity.charges[chargeIdx].status] %></span></td>
-                               <td class="table-cell">
-                                <%% if (['bank_transfer','credit_card','cash'].indexOf(entity.charges[chargeIdx].payment_method_id)>-1) {%>
-                                <span class="remove-booking-charges ui-icon ui-icon-trash remove-icon" data-charge-id="<%%=entity.charges[chargeIdx].id%>" data-booking-id="<%%=entity.id%>"></span>
-                                <%% } %>
-                               </td>
-                            </tr>
+        <div class="row">
+          <div class="col-lg-7">
+            <%% if (entity.charges.length > 0) { %>
+               <table class="table table-striped">
+                  <thead class="table-header">
+                    <tr>
+                      <th class="table-cell text-center" scope="col" style="width:5%">#</th>
+                      <th class="table-cell text-center" scope="col" style="width:30%"><%=t.booking_management.form.charge_date%></th>
+                      <th class="table-cell text-center" scope="col" style="width:20%"><%=t.booking_management.form.charge_payment_method%></th>
+                      <th class="table-cell text-center" scope="col" style="width:20%"><%=t.booking_management.form.charge_amount%></th>
+                      <th class="table-cell text-center" scope="col" style="width:20%"><%=t.booking_management.form.charge_status%></th>
+                      <th class="table-cell text-center" scope="col" style="width:5%"></th>
+                    </tr>
+                  </thead>
+                  <tbody class="table-tbody">
+                    <%% for (var chargeIdx=entity.charges.length-1; chargeIdx >=0 ; chargeIdx--) { %>
+                      <tr class="table-row">
+                         <td class="table-cell text-center"><%%=entity.charges[chargeIdx].id%></td>
+                         <td class="table-cell text-center"><%%=self.formatDate(entity.charges[chargeIdx].date, 'dd.MM.yyyy HH:mm')%></td>
+                         <td class="table-cell text-center"><%%=entity.charges[chargeIdx].payment_method_id%></td>
+                         <td class="table-cell text-center"><%%= new Number(entity.charges[chargeIdx].amount).toFixed(2) %></td>
+                         <td class="table-cell text-center"><span class="element-status <%%=self.model.entityHooks[0].chargeStatusClass(entity.charges[chargeIdx])%>"><%%= self.model.entityHooks[0].chargeStatusDescription[entity.charges[chargeIdx].status] %></span></td>
+                         <td class="table-cell">
+                          <%% if (['bank_transfer','credit_card','cash'].indexOf(entity.charges[chargeIdx].payment_method_id)>-1) {%>
+                          <span class="remove-booking-charges ui-icon ui-icon-trash remove-icon" data-charge-id="<%%=entity.charges[chargeIdx].id%>" data-booking-id="<%%=entity.id%>"></span>
                           <%% } %>
-                        </tbody>
-                     </table>        
-                  <%% } else { %>
-                    <p class="all-space"><%=t.booking_management.form.no_charges%></p>
-                  <%% } %>  
-            </div>
+                         </td>
+                      </tr>
+                    <%% } %>
+                  </tbody>
+               </table>
+            <%% } else { %>
+              <p class="all-space"><%=t.booking_management.form.no_charges%></p>
+            <%% } %>
           </div>
-          <div class="grid_5">
+          <div class="col-lg-5">
                 <div class="top-margin-top-space left-margin">
-                   <button id="new_charge" type="button" class="form-button green-button" style="background: none; color:black;text-decoration:underline">
+                   <button id="new_charge" type="button" class="btn btn-default">
                      <%=t.booking_management.form.new_charge%>
                    </button>
 
