--- a/views/_booking_management_external_invoicing_tab.erb
+++ b/views/_booking_management_external_invoicing_tab.erb
@@ -1,6 +1,5 @@
-<div class="container_12">
-  <div class="grid_6">
-    <form name="additional_data" style="border:1px solid #EEE">
+
+    <form name="additional_data">
       <input type="hidden" name="id" value="<%%=entity.id%>"/>
 
       <div class="element_template">
@@ -27,5 +26,3 @@
         </div>
       </div>
     </form>
-  </div>
-</div>
