--- a/views/_booking_management_header.erb
+++ b/views/_booking_management_header.erb
@@ -1,141 +1,38 @@
-<div class="element-detail all-border-solid-light overflow bottom-margin-1line">
-
-  <div class="container_12">
-    <div class="grid_5">
-      <div class="element_template">
-        <div class="entity-field">
-          <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.id %></span>
-          <span class="entity-fieldvalue"><%%= entity.id %></span>
-        </div>
+<div class="row">
+  <div class="col-sm-6 col-md-3">
+    <a class="block block-link-hover3 text-center" href="javascript:void(0)">
+      <div class="block-content block-content-full">
+        <div class="h3 font-w600 push-15-t"><span><%%= self.model.entityHooks[0].statusDescription[entity.status] %></span></div>
+        <div class="font-w600 push-15-t"><span class="fa fa-credit-card">&nbsp;</span><span><%%= self.model.entityHooks[0].paymentStatusDescription[entity.payment_status] %></span></div>
       </div>
-      <div class="element_template">
-        <div class="entity-field">
-          <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.creation_date %></span>
-          <span class="entity-fieldvalue">
-                    <%%= self.formatDate(entity.creation_date,'dd.MM.yyyy')%>
-                    <span><%%= self.formatDate(entity.creation_date,'HH:mm')%></span>
-                  </span>
-        </div>
-      </div>
-      <div class="element_template">
-        <div class="entity-field">
-          <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.status %></span>
-          <span class="entity-fieldvalue">
-                    <span class="<%%=self.model.entityHooks[0].statusClass(entity)%> element-status">
-                      <%%= self.model.entityHooks[0].statusDescription[entity.status] %>
-                    </span>
-                  </span>
-        </div>
-      </div>
-      <div class="element_template">
-        <div class="entity-field">
-          <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.payment_status %></span>
-          <span class="entity-fieldvalue">
-                      <span class="<%%=self.model.entityHooks[0].paymentStatusClass(entity)%> element-status">
-                        <%%= self.model.entityHooks[0].paymentStatusDescription[entity.payment_status] %>
-                      </span>
-                   </span>
-        </div>
-      </div>
-      <% if multiple_rental_locations %>
-        <div class="element_template">
-          <div class="entity-field">
-            <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.rental_location %></span>
-            <span class="entity-fieldvalue">
-                    <form name="rental_location">
-                        <input type="hidden" name="id" value="<%%=entity.id%>"/>
-                        <select name="rental_location_code" id="rental_location"></select>
-                        <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
-                    </form>
-                  </span>
-          </div>
-        </div>
-      <% end %>
-      <% if @addon_sales_channels %>
-        <div class="element_template">
-          <div class="entity-field">
-            <span class="entity-fieldlabel less_contrast_text">Canal de venta</span>
-            <span class="entity-fieldvalue"><%%= entity.sales_channel_code %></span>
-          </div>
-        </div>
-      <% end %>
-    </div>
-
-    <div class="grid_5">
-      <div class="element_template">
-        <div class="entity-field">
-          <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.date_from %></span>
-          <span class="entity-fieldvalue">
-                     <%%= self.formatDate(entity.date_from, 'dd.MM.yyyy') %> <% if booking_item_family.time_to_from%> <%%= entity.time_from?' , '+entity.time_from:'' %> <% end %>
-                 </span>
-        </div>
-        <div class="entity-field">
-          <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.pickup_place %></span>
-          <span class="entity-fieldvalue">
-                     <% if booking_item_family.pickup_return_place %>
-                       <%%= entity.pickup_place %>
-                     <% else %>
-                        -
-                     <% end %>
-                 </span>
-        </div>
-      </div>
-      <div class="element_template">
-        <div class="entity-field">
-          <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.date_to %></span>
-          <span class="entity-fieldvalue">
-                    <%%= self.formatDate(entity.date_to, 'dd.MM.yyyy') %> <% if booking_item_family.time_to_from%> <%%= entity.time_to?' , '+entity.time_to:'' %> <% end %>
-                 </span>
-        </div>
-        <div class="entity-field">
-          <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.return_place %></span>
-          <span class="entity-fieldvalue">
-                    <% if booking_item_family.pickup_return_place %>
-                    <%%= entity.return_place %>
-                    <% else %>
-                    -
-                    <% end %>
-                 </span>
-        </div>
-      </div>
-      <%% if (entity.number_of_adults > 0) { %>
-      <div class="element_template">
-        <div class="entity-field">
-          <span class="entity-fieldlabel"><%= t.booking_management.form.adults %></span>
-          <span class="entity-fieldvalue"><%%= entity.number_of_adults %></span>
-        </div>
-      </div>
-      <div class="element_template">
-        <div class="entity-field">
-          <span class="entity-fieldlabel"><%= t.booking_management.form.children %></span>
-          <span class="entity-fieldvalue"><%%= entity.number_of_children %></span>
-        </div>
-      </div>
-      <%% } %>
-      <div class="element_template">
-        <div class="entity-field">
-          <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.days %></span>
-          <span class="entity-fieldvalue"><%%= entity.days %></span>
-        </div>
-      </div>
-    </div>
-    <div class="grid_2">
-      <div class="container_12">
-        <div class="grid_12 smaller_text">
-          <%= partial :booking_management_actions %>
-        </div>
-      </div>
-    </div>
+      <div class="block-content block-content-full block-content-mini bg-gray-lighter font-w600"><span class="text-success">#<%%= entity.id %></span></div>
+    </a>
   </div>
-
-  <% if booking_item_family.driver and driver_min_age_rules %>
-    <%% if (entity.driver_age_rule_description && entity.driver_age_rule_description.length > 0) { %>
-    <div class="container_12">
-      <div class="highlight_block all-space centered_text" style="margin-top: 10px; margin-bottom: 10px<%% if (!entity.driver_age_allowed) { %>;background-color:red; color:white<%% } %>">
-        <%%= entity.driver_age_rule_description %> <%% if (!entity.driver_age_allowed) { %>(<%=t.booking_management.form.driver_age.not_allowed.upcase%>)<%%}%>
+  <div class="col-sm-6 col-md-3">
+    <a class="block block-link-hover3 text-center" href="javascript:void(0)">
+      <div class="block-content block-content-full">
+        <div class="<% if booking_item_family.time_to_from%>h4<%else%>h3<%end%> font-w600 push-15-t"><span class="fa fa-calendar">&nbsp;</span><%%= self.formatDate(entity.date_from, 'dd.MM.yyyy') %> <% if booking_item_family.time_to_from%> <%%= entity.time_from?entity.time_from:'' %> <% end %></div>
+        <div class="font-w400 push-15-t"><% if booking_item_family.pickup_return_place %><span class="fa fa-map-marker">&nbsp;</span><%%= entity.pickup_place %><%else%>&nbsp;<% end %></div>
       </div>
-    </div>
-    <%% } %>
-  <% end %>
-
+      <div class="block-content block-content-full block-content-mini bg-gray-lighter text-primary font-w600"><%= t.booking_management.form.date_from %></div>
+    </a>
+  </div>
+  <div class="col-sm-6 col-md-3">
+    <a class="block block-link-hover3 text-center" href="javascript:void(0)">
+      <div class="block-content block-content-full">
+        <div class="<% if booking_item_family.time_to_from%>h4<%else%>h3<%end%> font-w600 push-15-t"><span class="fa fa-calendar">&nbsp;</span><%%= self.formatDate(entity.date_to, 'dd.MM.yyyy') %> <% if booking_item_family.time_to_from%> <%%= entity.time_to?entity.time_to:'' %> <% end %></div>
+        <div class="font-w400 push-15-t"><% if booking_item_family.pickup_return_place %><span class="fa fa-map-marker">&nbsp;</span><%%= entity.return_place %><%else%>&nbsp;<%end%></div>
+      </div>
+      <div class="block-content block-content-full block-content-mini bg-gray-lighter text-primary font-w600"><%= t.booking_management.form.date_to %></div>
+    </a>
+  </div>
+  <div class="col-sm-6 col-md-3">
+    <a class="block block-link-hover3 text-center" href="javascript:void(0)">
+      <div class="block-content block-content-full">
+        <div class="h3 font-w600 push-15-t"><span><%%= entity.days %> <%= t.booking_management.form.days.to_s.downcase %></span></div>
+        <div class="font-w400 push-15-t"><%%= entity.sales_channel_code || '&nbsp;' %> <%% if (!entity.created_by_manager) { %>(web)<%%}%></div>
+      </div>
+      <div class="block-content block-content-full block-content-mini bg-gray-lighter text-muted font-w600"><%= t.booking_management.form.days %> <% if @addon_sales_channels %>/ Canal de venta<%end%></div>
+    </a>
+  </div>
 </div>
