--- a/views/_booking_management_notes.erb
+++ b/views/_booking_management_notes.erb
@@ -1,10 +1,7 @@
-             <form name="anotations" class="all-space">
+             <form name="anotations" style="height:208px">
                <input type="hidden" name="id" value="<%%=entity.id%>"/>             
-               <div class="more_contrast_text top-margin bottom-margin" style="text-decoration:underline"><%= t.booking_management.form.anotations %></div>
-               <div class="formrow top-space bottom-margin">
-                 <textarea name="notes" rows="10" class="fieldcontrol"><%%= entity.notes %></textarea>
-               </div>
-               <div class="navigation-bar bottom-margin">
+               <textarea name="notes" rows="8"  style="width:100%"><%%= entity.notes %></textarea>
+               <div class="navigation-bar bottom-margin top-margin">
                  <div class="navigation-bar-crud-buttons right-float">
                    <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
                  </div>
