--- a/views/_booking_management_other_tab.erb
+++ b/views/_booking_management_other_tab.erb
@@ -1,5 +1,3 @@
-      <div class="container_12">
-        <div class="grid_6">
             <div class="element_template">
               <div class="entity-field">
                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.free_access_id %></span>
@@ -54,5 +52,17 @@
                 <span class="entity-fieldvalue"><%%= entity.user_agent_platform %></span>
               </div>
             </div>
-        </div>
-      </div>
+          <div class="element_template">
+            <div class="entity-field">
+                <span class="entity-fieldlabel less_contrast_text"><%=t.guiblock.audit.form.create_date.label%></span>
+               <span class="entity-fieldvalue"><%%= self.formatDate(entity.creation_date) %></span> </div>
+          </div>
+          <div class="element_template">
+            <div class="entity-field"><span class="entity-fieldlabel less_contrast_text"><%=t.guiblock.audit.form.create_user.label%></span> <span class="entity-fieldvalue"><%%= entity.creation_user %></span> </div>
+          </div>
+          <div class="element_template">
+            <div class="entity-field"><span class="entity-fieldlabel less_contrast_text"><%=t.guiblock.audit.form.update_date.label%></span> <span class="entity-fieldvalue"><%%= self.formatDate(entity.last_update) %></span> </div>
+          </div>
+          <div class="element_template">
+            <div class="entity-field"><span class="entity-fieldlabel less_contrast_text"><%=t.guiblock.audit.form.update_user.label%></span> <span class="entity-fieldvalue"><%%= entity.last_update_user %></span> </div>
+          </div>
